--- a/package.json
+++ b/package.json
@@ -5,28 +5,36 @@
     "start": "nest start",
     "start:dev": "nest start --watch"
   },
- "dependencies": {
-  "@nestjs/common": "^11.0.1",
-  "@nestjs/core": "^11.0.1",
-  "@nestjs/config": "^4.0.2",
-  "@nestjs/jwt": "^11.0.1",
-  "@nestjs/passport": "^11.0.1",
-  "@nestjs/mapped-types": "^2.0.0",
-  "@nestjs/platform-express": "^11.0.1",
-  "@nestjs/typeorm": "^11.0.0",
-  "bcrypt": "^6.0.0",
-  "class-validator": "^0.14.2",
-  "class-transformer": "^0.5.1",
-  "passport": "^0.6.0",
-  "passport-jwt": "^4.0.0",
-  "pg": "^8.16.3",
-  "reflect-metadata": "^0.1.13",
-  "rxjs": "^7.8.1",
-  "typeorm": "^0.3.27"
-},
+  "dependencies": {
+    "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.1",
+    "@nestjs/mapped-types": "^2.0.0",
+    "@nestjs/passport": "^11.0.1",
+    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.1",
+    "@nestjs/typeorm": "^11.0.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "helmet": "^8.1.0",
+    "multer": "^2.0.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
+    "typeorm": "^0.3.27"
+  },
   "devDependencies": {
     "@nestjs/cli": "^9.5.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^5.0.5",
+    "@types/multer": "^2.0.0",
     "@types/passport-jwt": "^3.0.13",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
